Patched. Added more custom exceptions. Added custom filter. Added mail notification. Added openAI but is not working as intended.